compatible with single-gpu, 1-channel images, .npy file formats

--- a/occetc.ipynb
+++ b/occetc.ipynb
@@ -777,9 +777,11 @@
    "outputs": [],
    "source": [
     "accelerate launch train_svd.py \\\n",
-    "    --dataset /mnt/data/sonia/occetc/vars3-25.04.05 \\\n",
+    "    --dataset /home/cyclone/train/windmag_io \\\n",
+    "    --output_dir /home/sonia/cycloneSVD/out \\\n",
     "    --per_gpu_batch_size=1 --gradient_accumulation_steps=1 \\\n",
     "    --max_train_steps=50 \\\n",
+    "    --channels=1 \\\n",
     "    --width=32 \\\n",
     "    --height=32 \\\n",
     "    --checkpointing_steps=25 --checkpoints_total_limit=1 \\\n",
