pip info, fixes to region masking and skip prior datapoints in dataprep

--- a/dataprep.ipynb
+++ b/dataprep.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e43c1582",
    "metadata": {},
    "outputs": [],
    "source": [
     "# nts: activate langchain_env \n",
-    "import cdsapi\n",
+    "# import cdsapi\n",
     "import logging\n",
     "from tqdm import tqdm\n",
     "import xarray as xr\n",
@@ -18,8 +18,8 @@
     "import sys\n",
     "import contextlib\n",
     "import threading\n",
-    "from pyproj import Proj \n",
-    "from scipy.interpolate import RegularGridInterpolator\n",
+    "# from pyproj import Proj \n",
+    "# from scipy.interpolate import RegularGridInterpolator\n",
     "\n",
     "trackspath1='/home/sonia/mcms/tracker/1940-2010/era5/out_era5/era5/mcms_era5_1940_2010_tracks.txt'\n",
     "trackspath2='/home/sonia/mcms/tracker/2010-2024/era5/out_era5/era5/mcms_era5_2010_2024_tracks.txt'\n",
@@ -33,14 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "607b3bc7",
    "metadata": {},
    "outputs": [],
    "source": [
     "regmask = xr.open_dataset('/home/cyclone/regmask_0723_anl.nc')\n",
     "# atlantic ocean is regmask['reg_name'].values[109] # so 110 in regmaskoc values\n",
-    "reg_id = 110"
+    "# pacific is index 110 so is 111\n",
+    "regmask['reg_name'].values[110]\n",
+    "reg_id = 111"
    ]
   },
   {
@@ -2182,11 +2184,388 @@
     "        # c = 2 * np.arcsin(np.sqrt(a))\n",
     "        # dist = np.sum(RADIUS * c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "25fc2b24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>total_hrs</th>\n",
+       "      <th>unk1</th>\n",
+       "      <th>unk2</th>\n",
+       "      <th>unk3</th>\n",
+       "      <th>unk4</th>\n",
+       "      <th>unk5</th>\n",
+       "      <th>unk6</th>\n",
+       "      <th>z1</th>\n",
+       "      <th>z2</th>\n",
+       "      <th>unk7</th>\n",
+       "      <th>tid</th>\n",
+       "      <th>sid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>964248</td>\n",
+       "      <td>8</td>\n",
+       "      <td>699</td>\n",
+       "      <td>259214</td>\n",
+       "      <td>1011619</td>\n",
+       "      <td>1011643</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20100101000000000700</td>\n",
+       "      <td>20100101000000000700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>964248</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18699</td>\n",
+       "      <td>259574</td>\n",
+       "      <td>1011619</td>\n",
+       "      <td>1011635</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20100101000000018700</td>\n",
+       "      <td>20100101000000018700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>964248</td>\n",
+       "      <td>638</td>\n",
+       "      <td>33208</td>\n",
+       "      <td>250504</td>\n",
+       "      <td>999914</td>\n",
+       "      <td>1003182</td>\n",
+       "      <td>4134</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20100101000065033200</td>\n",
+       "      <td>20100101000065033200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>964248</td>\n",
+       "      <td>783</td>\n",
+       "      <td>31892</td>\n",
+       "      <td>248318</td>\n",
+       "      <td>1002141</td>\n",
+       "      <td>1004030</td>\n",
+       "      <td>1156</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20100101000080031900</td>\n",
+       "      <td>20100101000080031900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>964248</td>\n",
+       "      <td>1028</td>\n",
+       "      <td>9947</td>\n",
+       "      <td>244279</td>\n",
+       "      <td>1041527</td>\n",
+       "      <td>1042938</td>\n",
+       "      <td>710</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20100101000105009950</td>\n",
+       "      <td>20100101000105009950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>685337</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1088423</td>\n",
+       "      <td>13135</td>\n",
+       "      <td>20270</td>\n",
+       "      <td>70245</td>\n",
+       "      <td>996755</td>\n",
+       "      <td>1004878</td>\n",
+       "      <td>2032</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20240301231315020250</td>\n",
+       "      <td>20240301221305020100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>685338</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1088423</td>\n",
+       "      <td>15598</td>\n",
+       "      <td>5405</td>\n",
+       "      <td>34668</td>\n",
+       "      <td>986947</td>\n",
+       "      <td>990784</td>\n",
+       "      <td>4886</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20240301231560005400</td>\n",
+       "      <td>20240301221565005400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>685339</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1088423</td>\n",
+       "      <td>17391</td>\n",
+       "      <td>3752</td>\n",
+       "      <td>8715</td>\n",
+       "      <td>997390</td>\n",
+       "      <td>997771</td>\n",
+       "      <td>333</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20240301231740003750</td>\n",
+       "      <td>20240301221735003450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>685340</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1088423</td>\n",
+       "      <td>17601</td>\n",
+       "      <td>35299</td>\n",
+       "      <td>6466</td>\n",
+       "      <td>997697</td>\n",
+       "      <td>998207</td>\n",
+       "      <td>1377</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20240301231760035300</td>\n",
+       "      <td>20240301221775002650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>685341</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1088423</td>\n",
+       "      <td>17547</td>\n",
+       "      <td>12629</td>\n",
+       "      <td>6733</td>\n",
+       "      <td>996762</td>\n",
+       "      <td>996817</td>\n",
+       "      <td>969</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20240301231755012650</td>\n",
+       "      <td>20240301221795035950</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>685342 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        year  month  day  hour  total_hrs   unk1   unk2    unk3     unk4  \\\n",
+       "0       2010      1    1     0     964248      8    699  259214  1011619   \n",
+       "1       2010      1    1     0     964248      0  18699  259574  1011619   \n",
+       "2       2010      1    1     0     964248    638  33208  250504   999914   \n",
+       "3       2010      1    1     0     964248    783  31892  248318  1002141   \n",
+       "4       2010      1    1     0     964248   1028   9947  244279  1041527   \n",
+       "...      ...    ...  ...   ...        ...    ...    ...     ...      ...   \n",
+       "685337  2024     12   31    18    1088423  13135  20270   70245   996755   \n",
+       "685338  2024     12   31    18    1088423  15598   5405   34668   986947   \n",
+       "685339  2024     12   31    18    1088423  17391   3752    8715   997390   \n",
+       "685340  2024     12   31    18    1088423  17601  35299    6466   997697   \n",
+       "685341  2024     12   31    18    1088423  17547  12629    6733   996762   \n",
+       "\n",
+       "           unk5  unk6  z1  z2  unk7                   tid  \\\n",
+       "0       1011643     0   0   0     0  20100101000000000700   \n",
+       "1       1011635     0   0   0     0  20100101000000018700   \n",
+       "2       1003182  4134   0   0     0  20100101000065033200   \n",
+       "3       1004030  1156   0   0     0  20100101000080031900   \n",
+       "4       1042938   710   0   0     0  20100101000105009950   \n",
+       "...         ...   ...  ..  ..   ...                   ...   \n",
+       "685337  1004878  2032   0   0    10  20240301231315020250   \n",
+       "685338   990784  4886   0   0     0  20240301231560005400   \n",
+       "685339   997771   333   0   0     0  20240301231740003750   \n",
+       "685340   998207  1377   0   0     0  20240301231760035300   \n",
+       "685341   996817   969   0   0     4  20240301231755012650   \n",
+       "\n",
+       "                         sid  \n",
+       "0       20100101000000000700  \n",
+       "1       20100101000000018700  \n",
+       "2       20100101000065033200  \n",
+       "3       20100101000080031900  \n",
+       "4       20100101000105009950  \n",
+       "...                      ...  \n",
+       "685337  20240301221305020100  \n",
+       "685338  20240301221565005400  \n",
+       "685339  20240301221735003450  \n",
+       "685340  20240301221775002650  \n",
+       "685341  20240301221795035950  \n",
+       "\n",
+       "[685342 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "trackpath = '/home/cyclone/train/windmag_natlantic/mcms_era5_2010_2024_tracks.txt'\n",
+    "outpath = '/home/cyclone/train/windmag_natlantic/FIXEDmcms_era5_2010_2024_tracks.txt'\n",
+    "trackspre = pd.read_csv(trackpath, sep=' ', header=None, \n",
+    "        names=['year', 'month', 'day', 'hour', 'total_hrs', 'unk1', 'unk2', 'unk3', 'unk4', 'unk5', 'unk6', \n",
+    "               'z1', 'z2', 'unk7', 'tid', 'sid'])\n",
+    "\n",
+    "yeardfs = []\n",
+    "yeardfs.append(trackspre[trackspre['year']==2010].reset_index()) # since 2010 is already fine \n",
+    "\n",
+    "for year in range(2011, 2025):\n",
+    "        tracks = trackspre[trackspre['year']==year].reset_index()\n",
+    "        tracks['timehrly'] = tracks.apply(lambda x: f\"{x['year']}{x['month']:02d}{x['day']:02d}{x['hour']:02d}\", axis=1)\n",
+    "\n",
+    "        correct_timestamps = pd.date_range(start=f'{year}-01-01 00:00:00', \n",
+    "                                        end=f'{year}-12-31 18:00:00', \n",
+    "                                        freq='6h')\n",
+    "        assert len(correct_timestamps) == len(tracks['timehrly'].unique())\n",
+    "\n",
+    "        d={hr:(hr6.year, hr6.month, hr6.day, hr6.hour) for hr, hr6 in zip(tracks['timehrly'].unique(), correct_timestamps)}\n",
+    "        # tracks[['year', 'month', 'day', 'hour']]\n",
+    "\n",
+    "        tracks[['year', 'month', 'day', 'hour']] = pd.DataFrame.from_records(tracks['timehrly'].map(d))\n",
+    "        yeardfs.append(tracks)\n",
+    "        \n",
+    "tracks = pd.concat(yeardfs).reset_index().drop(['level_0', 'index', 'timehrly'], axis=1)\n",
+    "tracks.to_csv(outpath, sep=' ', header=None)\n",
+    "tracks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ce0d95cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.6359244672897376), np.float64(17.78398950563769))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for dpath in os.listdir(outpath):\n",
+    "    minv = np.inf\n",
+    "    maxv = -np.inf\n",
+    "    if os.path.isdir(f'{outpath}/{dpath}'):\n",
+    "        for i in range(8):\n",
+    "            frame = np.load(f'{outpath}/{dpath}/{i}.npy')\n",
+    "            minv = min(minv, frame.min())\n",
+    "            maxv = max(maxv, frame.max())\n",
+    "\n",
+    "minv, maxv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef6f0eb2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "langchain_env",
+   "display_name": "svd",
    "language": "python",
    "name": "python3"
   },
@@ -2200,7 +2579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
