--- a/occetc.ipynb
+++ b/occetc.ipynb
@@ -978,7 +978,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ccri",
+   "display_name": "svd",
    "language": "python",
    "name": "python3"
   },
@@ -992,7 +992,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
